Added images folder containing home-image to assets folder, styled all titles with style.css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Father Ted Quiz</title>
 </head>
 <body>
-    
+    <div class="main-body">
+        <p class="top-title">A Quiz for Ireland</p>
+        <p class="bottom-title">The Father Ted Quiz</p>
+        <a href="quiz.html" class="btn btn-play">Play Game (Ah Go On!)</a>
+    </div>
+    <div class="home-image">
+        <img src="assets/images/home-image.png" alt="father-ted-cast">
+    </div>
 </body>
 </html>
