--- a/quiz.html
+++ b/quiz.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Father Ted Quiz</title>
 </head>
 <body>
+    <div class="main-body">
+        <p class="top-title">Choose a level</p>
+    </div>
     
 </body>
 </html>
