added 3 card images to quiz.html

--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Father Ted Quiz</title>
 </head>
@@ -11,5 +12,21 @@
         <p class="top-title">Choose a level</p>
     </div>
     
+
+    <div class="container-cards">
+    <div class="card-group">
+  <div class="card1">
+    <img class="card-img-top" src="assets/images/dougal-level.png" alt="Card image cap">
+    <p>EASY</p>
+  </div>
+  <div class="card2">
+    <img class="card-img-top" src="assets/images/ted-level.png" alt="Card image cap">
+  </div>
+  <div class="card3">
+    <img class="card-img-top" src="assets/images/jack-level.png" alt="Card image cap">
+  </div>
+    </div>
+    </div>
+
 </body>
 </html>
