added 3 modals to quiz.html and styled with css

--- a/quiz.html
+++ b/quiz.html
@@ -14,15 +14,15 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-4 col-lg-4" data-toggle="modal" data-target="#easyLevelModal">
                     <img class="w-100" src="assets/images/dougal-level.png" alt="Dougal - Easy Level" />
-                    <p>Easy</p>
+                    <p class="level-titles">Easy</p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-4" data-toggle="modal" data-target="#mediumLevelModal">
                     <img class="w-100" src="assets/images/ted-level.png" alt="Ted - Medium Level" />
-                    <p>Medium</p>
+                    <p class="level-titles">Medium</p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-4" data-toggle="modal" data-target="#hardLevelModal">
                     <img class="w-100" src="assets/images/jack-level.png" alt="Jack - Hard Level" />
-                    <p>Hard</p>   
+                    <p class="level-titles">Hard</p>   
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <img src="https://i.gifer.com/AdAo.gif"/>
+        <img src="https://media.giphy.com/media/tyspit3ZZThcs/source.gif" id="medium-level-gif"/>
         <p>Think you have more brains than the hamster in the wheel running Dougals?</p>
         <p>5 multiple choice questions</p>
         <p>Try to answer them all correctly</p>
@@ -84,7 +84,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <img src="https://i.gifer.com/AdAo.gif"/>
+        <img src="https://media1.tenor.com/images/cbeaca46e415f219635b5716974b941b/tenor.gif?itemid=15581032"/>
         <p>Think you have more brains than the hamster in the wheel running Dougals?</p>
         <p>5 multiple choice questions</p>
         <p>Try to answer them all correctly</p>
@@ -98,8 +98,8 @@
 </div>
 
 
-<script src="assets/javascript/quiz.js"></script>
- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="assets/javascript/quiz.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
