styled cursor to change to point when hover over levels

--- a/quiz.html
+++ b/quiz.html
@@ -12,15 +12,15 @@
         <p class="quiz-title">Choose a level by selecting one of the priests</p>
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-12 col-md-4 col-lg-4" data-toggle="modal" data-target="#easyLevelModal">
+                <div class="col-12 col-md-4 col-lg-4 level-click" data-toggle="modal" data-target="#easyLevelModal">
                     <img class="w-100" src="assets/images/dougal-level.png" alt="Dougal - Easy Level" onclick="playAudio('assets/sounds/dougal-level.mp3')" />
                     <p class="level-titles">Dougal</p>
                 </div>
-                <div class="col-12 col-md-4 col-lg-4" data-toggle="modal" data-target="#mediumLevelModal">
+                <div class="col-12 col-md-4 col-lg-4 level-click" data-toggle="modal" data-target="#mediumLevelModal">
                     <img class="w-100" src="assets/images/ted-level.png" alt="Ted - Medium Level" onclick="playAudio('assets/sounds/ted-level.mp3')"/>
                     <p class="level-titles">Ted</p>
                 </div>
-                <div class="col-12 col-md-4 col-lg-4" data-toggle="modal" data-target="#hardLevelModal">
+                <div class="col-12 col-md-4 col-lg-4 level-click" data-toggle="modal" data-target="#hardLevelModal">
                     <img class="w-100" src="assets/images/jack-level.png" alt="Jack - Hard Level" onclick="playAudio('assets/sounds/jack-level.mp3')" />
                     <p class="level-titles">Jack</p>   
                 </div>
