created levels container

--- a/quiz.html
+++ b/quiz.html
@@ -9,22 +9,31 @@
 </head>
 <body>
     <div class="main-body container">
-        <p class="quiz-title">Choose a level by selecting one of the priests</p>
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-4 col-lg-4 level-click" data-toggle="modal" data-target="#easyLevelModal">
-                    <img class="w-100" src="assets/images/dougal-level.png" alt="Dougal - Easy Level" onclick="playAudio('assets/sounds/dougal-level.mp3')" />
-                    <p class="level-titles">Dougal</p>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4 level-click" data-toggle="modal" data-target="#mediumLevelModal">
-                    <img class="w-100" src="assets/images/ted-level.png" alt="Ted - Medium Level" onclick="playAudio('assets/sounds/ted-level.mp3')"/>
-                    <p class="level-titles">Ted</p>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4 level-click" data-toggle="modal" data-target="#hardLevelModal">
-                    <img class="w-100" src="assets/images/jack-level.png" alt="Jack - Hard Level" onclick="playAudio('assets/sounds/jack-level.mp3')" />
-                    <p class="level-titles">Jack</p>   
+        <div class="levels-container">
+            <p class="quiz-title">Choose a level by selecting one of the priests</p>
+                <div class="container-fluid">
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-md-4 col-lg-4 level-click" data-toggle="modal" data-target="#easyLevelModal">
+                            <img class="w-100" src="assets/images/dougal-level.png" alt="Dougal - Easy Level" onclick="playAudio('assets/sounds/dougal-level.mp3')" />
+                            <p class="level-titles">Dougal</p>
+                        </div>
+                    <div class="col-12 col-md-4 col-lg-4 level-click" data-toggle="modal" data-target="#mediumLevelModal">
+                        <img class="w-100" src="assets/images/ted-level.png" alt="Ted - Medium Level" onclick="playAudio('assets/sounds/ted-level.mp3')"/>
+                        <p class="level-titles">Ted</p>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-4 level-click" data-toggle="modal" data-target="#hardLevelModal">
+                        <img class="w-100" src="assets/images/jack-level.png" alt="Jack - Hard Level" onclick="playAudio('assets/sounds/jack-level.mp3')" />
+                        <p class="level-titles">Jack</p>   
+                    </div>
                 </div>
             </div>
+        </div>
+        <div class="easy-container">
+            <p>hello world</p>
+            <p>hello world</p>
+            <p>hello world</p>
+            <p>hello world</p>
+            <p>hello world</p>
         </div>
     </div>
 
@@ -42,7 +51,7 @@
         <hr>
         <p>Turn your dreams into reality...</p>
         <p>Answer all questions correctly to win<br> the "Golden Cleric Award"</p>
-        <p>Press Start to beging the quiz</p>
+        <p>Press Start to begin the quiz</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Back</button>
@@ -66,7 +75,7 @@
         <hr>
         <p>Will the points be resting in your score?</p>
         <p>Answer all questions correctly to win<br>the "Golden Cleric Award"</p>
-        <p>Press Start to beging the quiz</p>
+        <p>Press Start to begin the quiz</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Back</button>
@@ -90,7 +99,7 @@
         <hr>
         <p>Will you be a happy camper?</p>
         <p>Answer all questions correctly to win<br>the "Golden Cleric Award"</p>
-        <p>Press Start to beging the quiz</p>
+        <p>Press Start to begin the quiz</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Back</button>
